--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -1,28 +1,29 @@
-﻿<div class="card">
-  <div class="card-header">
-    {{pageTitle}}
-  </div>
-  <div class="card-body">
-    <div class="container-fluid">
-      <div class="text-center">
-        <img src="./assets/images/filmhunterlogo.png"
+<div class="card">
+	<div class="card-header">
+		{{pageTitle}}
+	</div>
+	<div class="card-body">
+		<div class="container-fluid">
+			<div class="text-center">
+				<img src="./assets/images/filmhunterlogo.png"
              class="img-responsive center-block"
              style="max-height:300px;padding-bottom:50px" />
       </div>
 
-      <div class="text-center">Developed by:</div>
-      <div class="text-center">
-        <h3>Deborah Kurata</h3>
-      </div>
+				<div class="text-center">Developed by:</div>
+				<div class="text-center">
+					<h3>Rahiyan Safin</h3>
+					<p>Inspired from Deborah Kurata</p>
+				</div>
 
-      <div class="text-center">@deborahkurata</div>
-      <div class="text-center">
-        <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
-      </div>
-      <div class="text-center">
-        <a href="http://bit.ly/Angular-GettingStarted"
-           target="_blank">http://bit.ly/Angular-GettingStarted</a>
-      </div>
-    </div>
-  </div>
-</div>
+				<div class="text-center">@deborahkurata</div>
+				<div class="text-center">
+					<a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
+				</div>
+				<div class="text-center">
+					<a href="http://bit.ly/Angular-GettingStarted"
+						target="_blank">http://bit.ly/Angular-GettingStarted</a>
+				</div>
+			</div>
+		</div>
+	</div>
